<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <RelativeLayout
        android:id="@+id/liner_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_lable"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="16dp"
            android:text="@string/title_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/title_lable"
            android:layout_toRightOf="@+id/title_lable"
            android:text="@string/title"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/size_lable"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_lable"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="16dp"
            android:text="@string/size_lable"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@+id/size_lable"
            android:layout_toRightOf="@+id/size_lable"
            android:text="@string/size"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dimension_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/size_lable"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="16dp"
            android:text="@string/dimension_label"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/dimention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/size"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/dimension_label"
            android:layout_toRightOf="@+id/dimension_label"
            android:text="@string/dimension_lable" />

    </RelativeLayout>


</RelativeLayout>